--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project Description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
     "mongoose": "^4.11.1",
     "nodemon": "^1.11.0",
     "query-string": "^4.3.4",
-  }
+  },
+  "engines":{
+        "node": "6.10.2"
+    }
 }
